# license-api

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: licenses.rs  mod.rs  ws.rs
common/: Cargo.toml
common/src/: auth.rs  errors.rs  lib.rs  license.rs  logger.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  license.rs  models.rs  repos.rs  services.rs  ws.rs
migrations/2025-08-04-112644_init_db/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
storage/: Cargo.toml
storage/src/: lib.rs  models.rs  repo.rs  schema.rs
