[workspace]
members = [
    "api",
    "core",
    "storage",
    "common"
]
resolver = "3"

[workspace.dependencies]
core = {path = "core"}
storage = {path = "storage"}
common = {path = "common"}

anyhow = "1.0.98"
async-trait = "0.1.88"
http = "1.3.1"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
diesel-async = {version = "0.6.1", features = ["postgres", "bb8"]}
diesel = { version = "2.2.12", features = ["chrono", "ipnet-address"] }
axum = {version = "0.8.4", features = ["ws"]}
