[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
diesel-async = { workspace = true }
diesel = {workspace = true}

chrono = { version = "0.4.41", features = ["serde"] }
bb8 = "0.9.0"
ipnet = { version = "2.11.0", features = ["serde"] }